apps/base/anisette/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: anisette
  labels:
    app.kubernetes.io/name: anisette
    gateway.excloo.dev/public-access: "true"
    pod-security.kubernetes.io/audit: restricted
    pod-security.kubernetes.io/enforce: restricted
    pod-security.kubernetes.io/warn: restricted
