apps/base/anisette/resources.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: anisette
  labels:
    app.kubernetes.io/name: anisette
    gateway.excloo.dev/public-access: "true"
    pod-security.kubernetes.io/audit: restricted
    pod-security.kubernetes.io/enforce: restricted
    pod-security.kubernetes.io/warn: restricted
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: anisette
  namespace: anisette
  labels:
    app.kubernetes.io/name: anisette
spec:
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: networking
          podSelector:
            matchLabels:
              app.kubernetes.io/name: traefik
      ports:
        - port: 6969
          protocol: TCP
  podSelector:
    matchLabels:
      app.kubernetes.io/name: anisette
  policyTypes:
    - Ingress
